--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -23,6 +23,9 @@ tests:
           path: spec.template.spec.securityContext.runAsUser
           value: 80
       - equal:
+          path: spec.template.spec.securityContext.runAsGroup
+          value: 1001
+      - equal:
           path: spec.template.spec.securityContext.supplementalGroups[0]
           value: 10
       - equal:
