--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -144,9 +144,8 @@ tests:
       - equal:
           path: spec.template.spec.securityContext.runAsUser
           value: 1000
-      - equal:
+      - notExists:
           path: spec.template.spec.containers[0].securityContext.runAsUser
-          value: 1000
       - equal:
           path: spec.template.spec.containers[0].image
           value: redis:8.2.1
