--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -185,6 +185,9 @@ tests:
       - equal:
           path: spec.template.spec.securityContext.runAsGroup
           value: 80
+      - equal:
+          path: spec.template.spec.containers[0].securityContext.runAsGroup
+          value: 80
       - notExists:
           path: spec.template.spec.securityContext.runAsGroup
       - equal:
