--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -171,7 +171,8 @@ tests:
   - it: ne doit pas forcer le groupe dans security context
     set:
       global:
-        securityContext: {}
+        securityContext:
+          runAsGroup: 11
     documentSelector:
       path: metadata.name
       value: test-nginx
@@ -185,9 +186,8 @@ tests:
       - equal:
           path: spec.template.spec.securityContext.runAsGroup
           value: 80
-      - equal:
+      - notExists:
           path: spec.template.spec.containers[0].securityContext.runAsGroup
-          value: 80
       - notExists:
           path: spec.template.spec.securityContext.runAsGroup
       - equal:
