--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -30,24 +30,10 @@ spec:
           {{- end }}
           {{- $sc := .securityContext | default (dict) }}
           {{- $gsc := $.Values.global.securityContext | default (dict) }}
+          {{- $merged := mergeOverwrite (deepCopy $gsc) (deepCopy $sc) }}
+          {{- if gt (len $merged) 0 }}
           securityContext:
-            {{- if hasKey $sc "runAsUser" }}
-            runAsUser: {{ $sc.runAsUser }}
-            {{- else if hasKey $gsc "runAsUser" }}
-            runAsUser: {{ $gsc.runAsUser }}
-            {{- end }}
-            {{- if hasKey $sc "runAsGroup" }}
-            runAsGroup: {{ $sc.runAsGroup }}
-            {{- else if hasKey $gsc "runAsGroup" }}
-            runAsGroup: {{ $gsc.runAsGroup }}
-            {{- end }}
-            {{- if hasKey $sc "fsGroup" }}
-            fsGroup: {{ $sc.fsGroup }}
-            {{- else if hasKey $gsc "fsGroup" }}
-            fsGroup: {{ $gsc.fsGroup }}
-            {{- end }}
-          {{- with .hostNetwork }}
-          hostNetwork: {{ . }}
+            {{- toYaml $.Values.global.securityContext | nindent 8 }}
           {{- end }}
           {{- with .initContainers }}
           initContainers:
