--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -33,7 +33,7 @@ spec:
           {{- $merged := mergeOverwrite (deepCopy $gsc) (deepCopy $sc) }}
           {{- if gt (len $merged) 0 }}
           securityContext:
-            {{- toYaml $.Values.global.securityContext | nindent 8 }}
+            {{- toYaml $merged | nindent 8 }}
           {{- end }}
           {{- with .initContainers }}
           initContainers:
