--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -33,13 +33,7 @@ spec:
       serviceAccountName: {{ $.Values.global.rbac.serviceAccountName }}
       automountServiceAccountToken: true
       {{- end }}
-      {{- $sc := .securityContext | default (dict) }}
-      {{- $gsc := $.Values.global.securityContext | default (dict) }}
-      {{- $merged := mergeOverwrite (deepCopy $gsc) (deepCopy $sc) }}
-      {{- if gt (len $merged) 0 }}
-      securityContext:
-        {{- toYaml $merged | nindent 8 }}
-      {{- end }}
+      {{ include "containers.securityContext" . | nindent 6 }}
       {{- with .hostNetwork }}
       hostNetwork: {{ . }}
       {{- end }}
