--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
       automountServiceAccountToken: true
       {{- end }}
 
-      {{ include "containers.securityContext" (dict "Global" $.Values.global "SecurityContext" .securityContext) | nindent 6 }}
+      {{ include "containers.securityContext" (dict "global" $.Values.global "securityContext" .securityContext) | nindent 6 }}
 
       {{- with .hostNetwork }}
       hostNetwork: {{ . }}
