--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -28,13 +28,9 @@ spec:
           serviceAccountName: {{ $.Values.global.rbac.serviceAccountName }}
           automountServiceAccountToken: true
           {{- end }}
-          {{- $sc := .securityContext | default (dict) }}
-          {{- $gsc := $.Values.global.securityContext | default (dict) }}
-          {{- $merged := mergeOverwrite (deepCopy $gsc) (deepCopy $sc) }}
-          {{- if gt (len $merged) 0 }}
-          securityContext:
-            {{- toYaml $merged | nindent 12 }}
-          {{- end }}
+
+          {{ include "containers.securityContext" (dict "global" $.Values.global "securityContext" .securityContext) | nindent 10 }}
+          
           {{- with .initContainers }}
           initContainers:
             {{- range . }}
