--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -81,7 +81,7 @@ spec:
             {{ toYaml . | nindent 12 }}
           {{- end }}
           {{- if .container }}
-          {{- with .container.securityContext) }}
+          {{- with .container.securityContext }}
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
