--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -79,8 +79,9 @@ components:
         runAsUser: 80
         supplementalGroups:
           - 10
-      containers:
-        runAsUser: 20
+      container:
+        securityContext:
+          runAsUser: 20
       initContainers:
         - name: setup-volume
           image:
