--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -81,10 +81,14 @@ spec:
             {{ toYaml . | nindent 12 }}
           {{- end }}
           {{- if .container }}
-          {{- with .container.securityContext }}
-          securityContext:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            {{- with .container.securityContext }}
+            securityContext:
+              {{- toYaml . | nindent 12 }}
+            {{- end }}
+            {{- with .container.capabilities }}
+            capabilities:
+              {{- toYaml . | nindent 14 }}
+            {{- end }}
           {{- end }}
           
           {{- include "containers.envs" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "env" .env) | nindent 10 }}
