--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -98,9 +98,15 @@ spec:
               args:
                 {{ toYaml . | nindent 16 }}
               {{- end }}
+              {{- if .container }}
               {{- with .container.securityContext }}
               securityContext:
                 {{- toYaml . | nindent 16 }}
+              {{- end }}
+              {{- with .container.capabilities }}
+              capabilities:
+                {{- toYaml . | nindent 16 }}
+              {{- end }}
               {{- end }}
               env:
                 - name: TZ
