--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -1,7 +1,7 @@
 {{- $components := include "commons.withAddons" . | fromYamlArray }}
 {{- range $components }}
 {{- $component := . }}
-{{- with $component.cronjob }}
+{{- range $component.cronjob }}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
