--- a/containers/sunshine-desktop/Dockerfile
+++ b/containers/sunshine-desktop/Dockerfile
@@ -35,17 +35,14 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Installation des drivers NVIDIA et dépendances
-RUN add-apt-repository multiverse \
-    && echo "deb http://archive.ubuntu.com/ubuntu noble-proposed multiverse" | sudo tee /etc/apt/sources.list.d/proposed.list \
-    && apt update
+RUN echo "deb http://archive.ubuntu.com/ubuntu/ noble-proposed multiverse" | sudo tee /etc/apt/sources.list.d/multiverse.list
 
 RUN apt-get update && apt-get install -y \
     libnvidia-encode-590 \
     libnvidia-decode-590 \
     && rm -rf /var/lib/apt/lists/*
 
-RUN rm /etc/apt/sources.list.d/proposed.list \
-    && sudo apt update
+RUN rm /etc/apt/sources.list.d/multiverse.list
 
 # Installation des dépendances
 RUN apt-get update && apt-get install -y \
