--- a/containers/sunshine-desktop/supervisord.conf
+++ b/containers/sunshine-desktop/supervisord.conf
@@ -1,52 +1,11 @@
 [supervisord]
 nodaemon=true
 user=root
-logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
-childlogdir=/var/log/supervisor
+logfile=/var/log/supervisord.log
 
-[program:dbus]
-command=/usr/bin/dbus-daemon --system --nofork --nopidfile
+[program:sunshine-session]
+command=/usr/local/bin/start.sh
+autostart=true
 autorestart=true
-priority=1
-stdout_logfile=/var/log/supervisor/dbus.log
-stderr_logfile=/var/log/supervisor/dbus_err.log
-
-[program:pipewire]
-command=/usr/bin/pipewire
-environment=XDG_RUNTIME_DIR="/run/user/0"
-autorestart=true
-priority=2
-stdout_logfile=/var/log/supervisor/pipewire.log
-stderr_logfile=/var/log/supervisor/pipewire_err.log
-
-[program:wireplumber]
-command=/usr/bin/wireplumber
-environment=XDG_RUNTIME_DIR="/run/user/0"
-autorestart=true
-priority=3
-stdout_logfile=/var/log/supervisor/wireplumber.log
-stderr_logfile=/var/log/supervisor/wireplumber_err.log
-
-[program:xvfb]
-command=/usr/bin/Xvfb :99 -screen 0 1920x1080x24 -ac +extension GLX +render -noreset
-autorestart=true
-priority=4
-stdout_logfile=/var/log/supervisor/xvfb.log
-stderr_logfile=/var/log/supervisor/xvfb_err.log
-
-[program:xfce4]
-command=/usr/bin/startxfce4
-environment=DISPLAY=":99",HOME="/root",XDG_RUNTIME_DIR="/run/user/0"
-autorestart=true
-priority=5
-stdout_logfile=/var/log/supervisor/xfce4.log
-stderr_logfile=/var/log/supervisor/xfce4_err.log
-
-[program:sunshine]
-command=/usr/bin/sunshine
-environment=DISPLAY=":99",HOME="/root",XDG_RUNTIME_DIR="/run/user/0"
-autorestart=true
-priority=6
-stdout_logfile=/var/log/supervisor/sunshine.log
-stderr_logfile=/var/log/supervisor/sunshine_err.log
+stdout_logfile=/var/log/sunshine.log
+stderr_logfile=/var/log/sunshine.err
