--- a/containers/sunshine-desktop/supervisord.conf
+++ b/containers/sunshine-desktop/supervisord.conf
@@ -1,11 +1,31 @@
 [supervisord]
 nodaemon=true
-user=root
 logfile=/var/log/supervisord.log
 
-[program:sunshine-session]
-command=/usr/local/bin/start.sh
-autostart=true
+[program:dbus]
+command=dbus-daemon --system --nofork
 autorestart=true
-stdout_logfile=/var/log/sunshine.log
-stderr_logfile=/var/log/sunshine.err
+priority=10
+
+[program:pipewire]
+command=/usr/bin/pipewire
+autorestart=true
+priority=20
+
+[program:wireplumber]
+command=/usr/bin/wireplumber
+autorestart=true
+priority=30
+
+[program:sway]
+command=/usr/bin/sway --unsupported-gpu --config /etc/sway/config
+autorestart=true
+priority=40
+environment=DISPLAY=":0",XDG_RUNTIME_DIR="/run/user/0"
+
+[program:sunshine]
+command=/usr/bin/sunshine
+autorestart=true
+priority=50
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
