--- a/containers/sunshine-desktop/supervisord.conf
+++ b/containers/sunshine-desktop/supervisord.conf
@@ -6,22 +6,30 @@ logfile=/var/log/supervisord.log
 command=dbus-daemon --system --nofork
 autorestart=true
 priority=10
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:pipewire]
 command=/usr/bin/pipewire
 autorestart=true
 priority=20
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:wireplumber]
 command=/usr/bin/wireplumber
 autorestart=true
 priority=30
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:sway]
 command=/usr/bin/sway --unsupported-gpu --config /etc/sway/config
 autorestart=true
 priority=40
 environment=DISPLAY=":0",XDG_RUNTIME_DIR="/run/user/0"
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:sunshine]
 command=/usr/bin/sunshine
