--- a/containers/sunshine-desktop/supervisord.conf
+++ b/containers/sunshine-desktop/supervisord.conf
@@ -1,6 +1,7 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisord.log
+logfile=/dev/stdout
+logfile_maxbytes=0
 
 [program:dbus]
 command=dbus-daemon --system --nofork
@@ -8,6 +9,8 @@ autorestart=true
 priority=10
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:pipewire]
 command=/usr/bin/pipewire
@@ -15,6 +18,8 @@ autorestart=true
 priority=20
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:wireplumber]
 command=/usr/bin/wireplumber
@@ -22,14 +27,18 @@ autorestart=true
 priority=30
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:sway]
 command=/usr/bin/sway --unsupported-gpu --config /etc/sway/config
 autorestart=true
 priority=40
-environment=DISPLAY=":0",XDG_RUNTIME_DIR="/run/user/0"
+environment=WLR_RENDERER="vulkan",WLR_NO_HARDWARE_CURSORS="1",WLR_BACKENDS="headless",XDG_RUNTIME_DIR="/run/user/0",DISPLAY=":0"
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:sunshine]
 command=/usr/bin/sunshine
@@ -37,3 +46,5 @@ autorestart=true
 priority=50
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
