--- a/containers/sunshine-desktop/supervisord.conf
+++ b/containers/sunshine-desktop/supervisord.conf
@@ -1,50 +1,30 @@
 [supervisord]
 nodaemon=true
-logfile=/dev/stdout
-logfile_maxbytes=0
-
-[program:dbus]
-command=dbus-daemon --system --nofork
-autorestart=true
-priority=10
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
 
-[program:pipewire]
-command=/usr/bin/pipewire
+[program:xorg]
+command=/usr/bin/Xorg :0 -nolisten tcp
+user=sunshine
+autostart=true
 autorestart=true
-priority=20
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
 
-[program:wireplumber]
-command=/usr/bin/wireplumber
+[program:xfce]
+command=/usr/bin/startxfce4
+environment=DISPLAY=":0"
+user=sunshine
+autostart=true
 autorestart=true
-priority=30
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
-
-[program:sway]
-command=/usr/bin/sway --unsupported-gpu --config /etc/sway/config
-autorestart=true
-priority=40
-environment=WLR_RENDERER="vulkan",WLR_NO_HARDWARE_CURSORS="1",WLR_BACKENDS="headless",XDG_RUNTIME_DIR="/run/user/0",DISPLAY=":0"
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
 
 [program:sunshine]
 command=/usr/bin/sunshine
+environment=DISPLAY=":0"
+user=sunshine
+autostart=true
 autorestart=true
-priority=50
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
